# brax

./: Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/: brag.rs  error.rs  lib.rs  partial_date.rs
crates/util/src/: error.rs
crates/view/: Cargo.toml  README.md
crates/view/src/: base.rs  case.rs  handler.rs  lib.rs  utils.rs
crates/view/src/app/: new.rs
crates/view/src/base/: autocomplete_text_field.rs  block.rs  frame.rs  list.rs  loop_list.rs  paragraph.rs  text_field.rs
crates/view/src/case/: text_field.rs  type_list.rs
crates/view/src/config/: colors.rs
crates/view/src/handler/: autocomplete_text_field.rs  handler.rs  loop_list.rs  text_field.rs
crates/view/src/model/: new.rs
crates/view/src/screen/: new.rs
crates/view/src/utils/: constant.rs  drawer.rs  text.rs
src/: main.rs
