[package]
name = "brax"
version = "0.1.0"
edition = "2021"

[dependencies]
fern = "0.7.0"
humantime = "2.1.0"
log = { workspace = true }
view = { path = "crates/view" }

[workspace]
members = [
    "crates/domain",
    "crates/usecase",
    "crates/gateway",
    "crates/infrastructure",
    "crates/utils",
    "crates/view",
    # presenter
]

[workspace.dependencies]
log = "0.4.22"
strum = "0.26.3"
