[package]
name = "view"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
util = { path = "../util" }

crossterm = "0.28.1"
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
chrono = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
lazy_static = "1.5.0"
dialoguer = "0.11.0"
